# downloader-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: linter.yml  tests.yml
docker/: Dockerfile.armv7  compile_armv7.sh
examples/test_downloader/: main.rs
ref_tests/unit/online_importer/: online_importer_with_priority_storage_test_base.py  test_online_importer_with_priority_storage_prefer_external.py  test_online_importer_with_priority_storage_prefer_sd.py
src/: delme.rs  filesystem.rs  lib.rs  other.rs
tests/: unit_delme.rs  unit_smoke.rs
tests/fakes/: any.rs  fake_delme.rs  fake_filesystem.rs  macros.rs  mod.rs  objects.rs
