[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
percent-encoding = "2.3.1"

[dev-dependencies]
anymap = "0.12.1"
serde_json = "1.0"


[lints.rust]
# This codebase should never need to use any unsafe code. We're not accessing
# registers, messing with raw pointers, or any of that old man C stuff.
# However, we are doing C ABI stuff, and some of those things are unsafe
# (most notably, the use of no_mangle).
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
## NB - see clippy.toml for more granular configurations.

# Runtime unwraps are disallowed because they can panic.
unwrap_used = "deny"

# Expect is effectively unwrap with a nice error message, so it follows the
# same rationale as above as above.
expect_used = "deny"

# And, if we don't like implict panics from unwrap and expect, surely we don't
# want explicit panics either.
panic = "deny"
